--- a/WebContent/引き合い案件/menuList.html
+++ b/WebContent/引き合い案件/menuList.html
@@ -9,52 +9,50 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 
-<body class="bg-light">
+<body class="bg-info">
 
 	<div>
 		<a href="index.html">戻る</a>
 	</div>
 	<div class="container">
 		<div class="my-3 p-3 bg-white rounded shadow-sm">
-		<h1 class="mx-auto">イベントメニュー</h1>
+			<h1>イベントメニュー</h1>
 
-		<hr>
+			<hr>
 
-		<div class="mx-auto" style="width: 200px;">
-			<p>
-		<a href="./eventList.html" class="btn btn-primary mx-auto" style="width: 200px;">
-			イベント一覧
-		</a>
-	</p>
-		</div>
-		<div class="">
-			<p>
-		<a href="#" class="btn btn-primary">
-			イベント作成
-		</a>
-	</p>
-		</div>
-		<div class="">
-			<p>
-		<a href="#" class="btn btn-primary">
-			イベント編集
-		</a>
-	</p>
-		</div>
-		<div class="">
-			<p>
-		<a href="#" class="btn btn-primary">
-			イベント削除
-		</a>
-	</p>
-		</div>
+			<div class="mx-auto" style="width: 200px;">
+				<p>
+					<a href="./eventList.html" class="btn btn-primary mx-auto" style="width: 200px;">
+						イベント一覧
+					</a>
+				</p>
+			</div>
+			<div class="mx-auto" style="width: 200px;">
+				<p>
+					<a href="#" class="btn btn-primary mx-auto" style="width: 200px;">
+						イベント作成
+					</a>
+				</p>
+			</div>
+			<div class="mx-auto" style="width: 200px;">
+				<p>
+					<a href="#" class="btn btn-primary mx-auto" style="width: 200px;">
+						イベント編集
+					</a>
+				</p>
+			</div>
+			<div class="mx-auto" style="width: 200px;">
+				<p>
+					<a href="#" class="btn btn-primary mx-auto" style="width: 200px;">
+						イベント削除
+					</a>
+				</p>
+			</div>
 
+		<div style="height: 500px;"></div>
 
-</div>
+		</div>
 	</div>
-
-
-
 
 </body>
 
