--- a/WebContent/引き合い案件/menuList.html
+++ b/WebContent/引き合い案件/menuList.html
@@ -9,14 +9,14 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 
-<body class="bg-info">
+<body class="bg-light">
 
 	<div>
 		<a href="index.html">戻る</a>
 	</div>
 	<div class="container">
 		<div class="my-3 p-3 bg-white rounded shadow-sm">
-			<h1>イベントメニュー</h1>
+			<h1 class="text-center">イベントメニュー</h1>
 
 			<hr>
 
