--- a/WebContent/引き合い案件/menuList.html
+++ b/WebContent/引き合い案件/menuList.html
@@ -22,7 +22,7 @@
 
 			<div class="mx-auto" style="width: 200px;">
 				<p>
-					<a href="./eventList.html" class="btn btn-primary mx-auto" style="width: 200px;">
+					<a href="#" class="btn btn-primary mx-auto" style="width: 200px;">
 						イベント一覧
 					</a>
 				</p>
