ナビゲーションバー
３が一番シンプル。
２は下書き。

--- a/WebContent/引き合い案件/menuList.html
+++ b/WebContent/引き合い案件/menuList.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="js">
 
 <head>
+	<meta charset="UTF-8">
 	<title>title</title>
 
     <!-- BootstrapのCSS読み込み -->
