--- a/WebContent/引き合い案件/index.html
+++ b/WebContent/引き合い案件/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="js">
 <head>
 <meta charset="UTF-8">
 <title>ログイン</title>
@@ -15,6 +15,8 @@
   <h1>ログイン画面差し替え予定</h1>
 
   <a class="btn btn-primary" href="menuList.html">メニュー</a><br>
+  <a class="btn btn-primary" href="menuList2.html">メニュー２</a><br>
+  <a class="btn btn-primary" href="menuList3.html">メニュー３</a><br>
   <a class="btn btn-dark" href="#">管理</a>
 
 
