ChatJS使ってみる！

--- a/WebContent/引き合い案件/index.html
+++ b/WebContent/引き合い案件/index.html
@@ -18,6 +18,7 @@
   <a class="btn btn-primary" href="menuList2.html">メニュー２</a><br><br>
   <a class="btn btn-primary" href="menuList3.html">メニュー３</a><br><br>
   <a class="btn btn-primary" href="menuList4.html">メニュー４</a><br><br>
+  <a class="btn btn-primary" href="chartjs1.html">チャートJS１</a><br><br>
   <a class="btn btn-dark" href="#">管理</a>
 
 
